--- a/TheGreatestScheduleEverScheduled/pom.xml
+++ b/TheGreatestScheduleEverScheduled/pom.xml
@@ -32,5 +32,11 @@
   	 <version>2.5</version>
    	 <scope>provided</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+   	 <groupId>mysql</groupId>
+   	 <artifactId>mysql-connector-java</artifactId>
+   	 <version>5.1.6</version>
+	</dependency>
   </dependencies>
 </project>
