--- a/TheGreatestScheduleEverScheduled/WebContent/WEB-INF/web.xml
+++ b/TheGreatestScheduleEverScheduled/WebContent/WEB-INF/web.xml
@@ -6,10 +6,10 @@
   </welcome-file-list>
 	
 	<servlet>
-		<servlet-name>loginController</servlet-name>
-		<servlet-class>controller.loginController</servlet-class>
+		<servlet-name>LoginController</servlet-name>
+		<servlet-class>controller.LoginController</servlet-class>
 	</servlet>
-  
+
 	<servlet-mapping>
 		<servlet-name>LoginController</servlet-name>
 		<url-pattern>/login</url-pattern>
