--- a/TheGreatestScheduleEverScheduled/pom.xml
+++ b/TheGreatestScheduleEverScheduled/pom.xml
@@ -39,9 +39,14 @@
    	 <version>5.1.6</version>
 	</dependency>
 	<dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.11</version> 
-</dependency>
+   		<groupId>junit</groupId>
+   	 	<artifactId>junit</artifactId>
+   		<version>4.11</version> 
+	</dependency>
+	<dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
   </dependencies>
 </project>
