--- a/TheGreatestScheduleEverScheduled/WebContent/WEB-INF/web.xml
+++ b/TheGreatestScheduleEverScheduled/WebContent/WEB-INF/web.xml
@@ -14,5 +14,15 @@
 		<servlet-name>LoginController</servlet-name>
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>AddAvailabilityController</servlet-name>
+		<servlet-class>controller.AddAvailabilityController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>AddAvailabilityController</servlet-name>
+		<url-pattern>/addAvailability</url-pattern>
+	</servlet-mapping>
   
 </web-app>
